[gd_scene load_steps=5 format=3 uid="uid://cj8xvb4vwxqjf"]

[ext_resource type="Script" path="res://Scripts/Buttons.gd" id="1"]
[ext_resource type="Theme" uid="uid://b7mjswntukbu2" path="res://Themes/black_and_white_theme.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://co4qjeoiase5d" path="res://Textures/Blocks/dirt.png" id="14"]
[ext_resource type="Script" path="res://Scripts/SettingsMusic.gd" id="19"]

[node name="Control" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1.0

[node name="SettingsMusic" type="Control" parent="."]
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 712.0
script = ExtResource("19")

[node name="TextureRect" type="TextureRect" parent="SettingsMusic"]
layout_mode = 0
offset_top = -1.0
offset_right = 1280.0
offset_bottom = 728.0
texture = ExtResource("14")
stretch_mode = 1

[node name="Line2D" type="Line2D" parent="SettingsMusic"]
points = PackedVector2Array(384, 88, 896, 88)
width = 2.0
default_color = Color(0, 0, 0, 1)

[node name="Back" type="Button" parent="SettingsMusic"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 37.0
script = ExtResource("1")

[node name="Label" type="Label" parent="SettingsMusic/Back"]
texture_filter = 1
layout_mode = 0
offset_top = -1.0
offset_right = 60.0
offset_bottom = 14.0
scale = Vector2(2, 2)
size_flags_horizontal = 3
size_flags_vertical = 7
mouse_filter = 1
text = "menu_back"
clip_text = true

[node name="Label_Master" type="Label" parent="SettingsMusic"]
texture_filter = 1
layout_mode = 0
offset_left = 321.0
offset_top = 188.0
offset_right = 608.0
offset_bottom = 199.0
scale = Vector2(2, 2)
theme = ExtResource("2")
text = "menu_sounds_effects_volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="SettingsMusic/Label_Master"]
layout_mode = 0
offset_left = -1.0
offset_top = 12.0
offset_right = 641.0
offset_bottom = 44.0
scale = Vector2(0.5, 0.5)
focus_mode = 0
theme = ExtResource("2")
min_value = -80.0
max_value = 0.0
step = 4.0
value = -80.0

[node name="MinVal" type="Label" parent="SettingsMusic/Label_Master"]
texture_filter = 1
layout_mode = 0
offset_left = -26.5
offset_top = 17.0
offset_right = 13.5
offset_bottom = 28.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("2")
text = "0"

[node name="MaxVal" type="Label" parent="SettingsMusic/Label_Master"]
texture_filter = 1
layout_mode = 0
offset_left = 323.5
offset_top = 17.0
offset_right = 363.5
offset_bottom = 36.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("2")
text = "100"

[node name="Val" type="Label" parent="SettingsMusic/Label_Master"]
texture_filter = 1
layout_mode = 0
offset_left = -160.0
offset_top = 22.0
offset_right = 480.0
offset_bottom = 33.0
theme = ExtResource("2")
text = "50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_Player" type="Label" parent="SettingsMusic"]
texture_filter = 1
layout_mode = 0
offset_left = 321.0
offset_top = 288.0
offset_right = 605.0
offset_bottom = 299.0
scale = Vector2(2, 2)
theme = ExtResource("2")
text = "menu_sounds_player_volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="SettingsMusic/Label_Player"]
layout_mode = 0
offset_left = -2.0
offset_top = 12.0
offset_right = 641.0
offset_bottom = 44.0
scale = Vector2(0.5, 0.5)
focus_mode = 0
theme = ExtResource("2")
min_value = -80.0
max_value = 0.0
step = 4.0
value = -80.0

[node name="MinVal" type="Label" parent="SettingsMusic/Label_Player"]
texture_filter = 1
layout_mode = 0
offset_left = -27.0
offset_top = 17.0
offset_right = 13.0
offset_bottom = 28.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("2")
text = "0"

[node name="MaxVal" type="Label" parent="SettingsMusic/Label_Player"]
texture_filter = 1
layout_mode = 0
offset_left = 323.0
offset_top = 17.0
offset_right = 363.0
offset_bottom = 36.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("2")
text = "100"

[node name="Val" type="Label" parent="SettingsMusic/Label_Player"]
texture_filter = 1
layout_mode = 0
offset_left = -160.0
offset_top = 22.0
offset_right = 480.0
offset_bottom = 33.0
theme = ExtResource("2")
text = "50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_Blocks" type="Label" parent="SettingsMusic"]
texture_filter = 1
layout_mode = 0
offset_left = 321.0
offset_top = 385.0
offset_right = 608.0
offset_bottom = 396.0
scale = Vector2(2, 2)
theme = ExtResource("2")
text = "menu_sounds_blocks_volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="SettingsMusic/Label_Blocks"]
layout_mode = 0
offset_left = -2.0
offset_top = 12.0
offset_right = 642.0
offset_bottom = 44.0
scale = Vector2(0.5, 0.5)
focus_mode = 0
theme = ExtResource("2")
min_value = -80.0
max_value = 0.0
step = 4.0
value = -80.0

[node name="MinVal" type="Label" parent="SettingsMusic/Label_Blocks"]
texture_filter = 1
layout_mode = 0
offset_left = -27.0
offset_top = 17.0
offset_right = 13.0
offset_bottom = 28.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("2")
text = "0"

[node name="MaxVal" type="Label" parent="SettingsMusic/Label_Blocks"]
texture_filter = 1
layout_mode = 0
offset_left = 323.0
offset_top = 17.0
offset_right = 363.0
offset_bottom = 36.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("2")
text = "100"

[node name="Val" type="Label" parent="SettingsMusic/Label_Blocks"]
texture_filter = 1
layout_mode = 0
offset_left = -160.0
offset_top = 22.0
offset_right = 480.0
offset_bottom = 33.0
theme = ExtResource("2")
text = "50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_Music" type="Label" parent="SettingsMusic"]
texture_filter = 1
layout_mode = 0
offset_left = 321.0
offset_top = 481.0
offset_right = 605.0
offset_bottom = 492.0
scale = Vector2(2, 2)
theme = ExtResource("2")
text = "menu_sounds_music_volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="SettingsMusic/Label_Music"]
layout_mode = 0
offset_left = -2.0
offset_top = 12.0
offset_right = 641.0
offset_bottom = 44.0
scale = Vector2(0.5, 0.5)
focus_mode = 0
theme = ExtResource("2")
min_value = -80.0
max_value = 0.0
step = 4.0
value = -80.0

[node name="MinVal" type="Label" parent="SettingsMusic/Label_Music"]
texture_filter = 1
layout_mode = 0
offset_left = -27.0
offset_top = 17.0
offset_right = 13.0
offset_bottom = 28.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("2")
text = "0"

[node name="MaxVal" type="Label" parent="SettingsMusic/Label_Music"]
texture_filter = 1
layout_mode = 0
offset_left = 323.0
offset_top = 17.0
offset_right = 363.0
offset_bottom = 36.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("2")
text = "100"

[node name="Val" type="Label" parent="SettingsMusic/Label_Music"]
texture_filter = 1
layout_mode = 0
offset_left = -160.0
offset_top = 22.0
offset_right = 480.0
offset_bottom = 33.0
theme = ExtResource("2")
text = "50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="SettingsMusic"]
texture_filter = 1
layout_mode = 0
offset_top = 32.0
offset_right = 320.0
offset_bottom = 43.0
scale = Vector2(4, 4)
text = "menu_sounds"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Effects" type="AudioStreamPlayer" parent="."]
volume_db = -80.0

[node name="Music" type="AudioStreamPlayer" parent="."]
volume_db = -80.0

[connection signal="mouse_entered" from="SettingsMusic/Back" to="SettingsMusic/Back" method="_on_Back_mouse_entered"]
[connection signal="mouse_exited" from="SettingsMusic/Back" to="SettingsMusic/Back" method="_on_Back_mouse_exited"]
[connection signal="pressed" from="SettingsMusic/Back" to="SettingsMusic" method="_on_Back_pressed"]
